# dbt-yaml-check

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  tests.yml
dbt_yaml_check/: main.py
tests/: test_dbt_yaml_check.py  test_main.py
tests/jaffle_shop/: catalog.json  manifest.json
