[tool.poetry]
name = "dbt-yaml-check"
version = "0.2.0"
description = "`dbt-yaml-check` is a utility to check that `dbt` nodes defined in YAML exist in SQL."
authors = ["Kshitij Aranke <kshitij@aranke.org>"]
readme = "README.md"

[tool.poetry.scripts]
dbt-yaml-check = "dbt_yaml_check.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.1"}
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
